src/objects/OrderDetail__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <type>Number</type>
        <precision>11</precision>
        <scale>7</scale>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <label>Order ID</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <label>Product ID</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <type>Number</type>
        <precision>5</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <type>Currency</type>
        <precision>16</precision>
        <scale>2</scale>
    </fields>
    <label>Order Detail</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>{!label} Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>